# rust-web-starter

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/frontend/: package-lock.json
backend/frontend/src/: App.js
backend/frontend/src/components/: About.js  Nav.js  Shop.js
backend/migrations/2020-07-22-104345_UsersTable/: up.sql
backend/src/: main.rs  schema.rs
backend/src/controllers/: about.rs  home.rs  main.rs  mod.rs  sign_in.rs  sign_up.rs
backend/src/models/: user.rs
backend/src/views/: 404.html  about.html  index.html  signin.html  signup.html  users.html
backend/src/views/_next/static/-JLHMypnl3Ip60WfIouGJ/: _buildManifest.js
backend/src/views/_next/static/-JLHMypnl3Ip60WfIouGJ/pages/: index.js  login.js
backend/src/views/_next/static/4_H_g0yglFPZShEQdEGg6/: _buildManifest.js
backend/src/views/_next/static/4ol47UXl6klRqMxooL57b/: _buildManifest.js
backend/src/views/_next/static/FQhER3-C84aSlDLgcghJ-/: _buildManifest.js
backend/src/views/_next/static/SBJqguol_9q9c0D6EBTh6/: _buildManifest.js
backend/src/views/_next/static/TUDkwxIk6t0OTzvsZqv8x/: _buildManifest.js
backend/src/views/_next/static/Wdiz6T3XenM9Nd1mtdTDe/: _buildManifest.js
backend/src/views/_next/static/jP74RcH-60eThHjVOYUoQ/: _buildManifest.js
backend/src/views/_next/static/runtime/: main-419e4128085d30f15700.js  main.js  webpack.js
backend/src/views/_next/static/tjT9xTzGtyP_t_LhzGsmy/: _buildManifest.js
backend/src/views/users/: 101.html  102.html  103.html  104.html
frontend/: Cargo.toml  Dockerfile  index.html  (+2 more)
(+32 files in other folders)
