[package]
name = "web"
version = "0.1.0"
authors = ["Igor <ivkovityigor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
listenfd = "0.3.3"
actix-files = "0.2.2"
serde = { version = "1.0.114", features = ["derive"] }
actix-cors = "0.2.0"
jsonwebtoken = "7.2.0"
sqlx = { version = "0.3", features = [ "postgres" ] }
dotenv = "0.15.0"
anyhow = "1.0.31"
validator = "0.10.1"
validator_derive = "0.10.1"
serde_derive = "1.0.114"
serde_json = "1.0.56"
